@@ -1,2 +1,2 @@
-java --add-opens java.base/java.lang=ALL-UNNAMED -jar game.jar
+java -jar game.jar
 pause
